--- a/src/assets/scss/_theme-variables.scss
+++ b/src/assets/scss/_theme-variables.scss
@@ -11,13 +11,13 @@ $breakpoint-xl: 1200px;
   --font-size-small: 12px;
   
   --primary-color: #5C2941;
-  --header-bg: #5C2941;
+  --header-bg: #585942;
 
   --home-link-color: #A1613F;
   --home-link-hover-color:  var(--primary-color);
 
-  --button-color: #E5C3D3;
-  --button-alternate-color: #5C2941;
+  --button-color: #fff;
+  --button-alternate-color: #585942;
 
   --post-link-color: #0F070B;
 
